--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^17.2.3",
     "prisma": "^6.19.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "yahoo-finance2": "^3.10.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
